sftp-client/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sftp-client
spec:
  containers:
    - image: preetamdutta/sftp-client:latest
      name: sftp-client
      imagePullPolicy: IfNotPresent
      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "100m"
          memory: "128Mi"
