sftp-client/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sftp-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: sftp-client
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 172.19.0.6/16
    ports:
    - protocol: TCP
      port: 22
